# solana-zk-example

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
circuit/: compile.sh  multiply.circom
programs/simple_zk_example/: Cargo.toml
programs/simple_zk_example/src/: lib.rs  program_error.rs
programs/simple_zk_example/src/instructions/: mod.rs  verify_zkp.rs
programs/simple_zk_example/src/processors/: verify_zkp.rs
programs/simple_zk_example/src/zk/: mod.rs  verifier.rs  verifying_key.rs
scripts/: convertProof.js  proof.json  public.json  verification_key.json
tests/: verifyZkp.js
tests/utils/: solana-chai.js  tx.js  zk.js
wasm/: Cargo.toml
wasm/src/: lib.rs  utils.rs
