[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-serialize = "0.4.2"
ark-bn254 = "0.4.0"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
