[package]
name = "simple_zk_example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_zk_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-safe-math = "0.4.0"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", branch = "anchor-0.29" }
